<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_nomal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/regist_button_back"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="-5dp"
            android:background="@drawable/title_bar_back" />

        <TextView
            android:id="@+id/regist1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="-3dp"
            android:shadowColor="@color/TextColorWhite"
            android:text="@string/regist_new_account"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/TextColorWhite" />
    </LinearLayout>

    <EditText
        android:id="@+id/regist_txt_phone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:hint="@string/phone" 
        android:inputType="phone"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </EditText>

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txt_repeat_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/txt_validate_code"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/validate_code"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </EditText>

        <Button
            android:id="@+id/regist1_button_validate_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/validation_code"
            android:text="@string/get_validate_code" />
    </LinearLayout>

    <Button
        android:id="@+id/regist_button_finish"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/finish" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" >

        <CheckBox
            android:id="@+id/read_and_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_read_and_confirm"
            android:textColor="@color/TextColorBlack" />

        <TextView
            android:id="@+id/regist_txt_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/telephone_buy_lotus_protocol"
            android:textColor="#2200C1" />
    </LinearLayout>

</LinearLayout>