<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logindialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_nomal"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/TextColorWhite"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/TextColorWhite" />
    </LinearLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="45dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:shadowColor="@color/TextColorWhite"
            android:text="@string/login_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/TextColorBlack" />
    
        <EditText
            android:id="@+id/txt_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:ems="10"
            android:layout_alignParentRight="true"
            android:hint="@string/mail_or_phone"
            android:textAppearance="?android:attr/textAppearanceMedium" >


        </EditText>
    
            
        </RelativeLayout>

  <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >
        
            <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:shadowColor="@color/TextColorWhite"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/TextColorBlack" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
             android:layout_marginRight="30dp"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"            
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </RelativeLayout>      
    <TextView
        android:id="@+id/txt_loginerror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/login_fail"
        android:textColor="@color/TextColorRed"
        android:visibility="invisible" />
    <Button
        android:id="@+id/button_login"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" >

        <TextView
            android:id="@+id/txt_toregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="left"
            android:shadowColor="#ff000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:text="@string/forget_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#2200C1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp"
            android:shadowColor="#ff000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:text="@string/regist"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#2200C1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/TextColorBlack" >
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:shadowColor="#ff000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/login_as_other_platform"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/TextColorBlack" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sina_weibo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/tencent_qq" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/paypal" />

    </LinearLayout>

</LinearLayout>